--- a/Biplot/index.html
+++ b/Biplot/index.html
@@ -9,12 +9,12 @@
 	<head>
 		<title>Advanced Display</title>
 		<link rel="stylesheet" href="main.css">
-		<script type="module" src="corrMatrix.js"></script>
+		<script type="module" src="pca.js"></script>
 	</head>
 	<body>
 		<div class="center">
-			<h1>Advanced Display: 8x8 Correlation Matrix</h1>
-			<div id="correlationMatrix"></div>
+			<h1>Advanced Display: PCA Biplot with Projected Axes</h1>
+			<div id="pcaPlot"></div>
 			<div id="legend"></div>
 		</div>
 	</body>
