--- a/MDS/index.html
+++ b/MDS/index.html
@@ -9,13 +9,12 @@
 	<head>
 		<title>Advanced Display</title>
 		<link rel="stylesheet" href="main.css">
-		<script type="module" src="corrMatrix.js"></script>
+		<script type="module" src="MDS.js"></script>
 	</head>
 	<body>
 		<div class="center">
-			<h1>Advanced Display: 8x8 Correlation Matrix</h1>
-			<div id="correlationMatrix"></div>
-			<div id="legend"></div>
+			<h1>Advanced Display: MDS - 1 - |Correlation|</h1>
+			<div id="mds"></div>
 		</div>
 	</body>
 </html>
